--- a/debug.html
+++ b/debug.html
@@ -485,6 +485,7 @@
       let activeTorrent = null;
       let statusInterval = null;
       let currentLabel = DEBUG_TITLE;
+      let peerWatchTimeout = null;
 
       function log(line) {
         if (!logEl) return;
@@ -525,6 +526,28 @@
         }
         client = new WebTorrent();
         log("Created WebTorrent client.");
+        try {
+          client.on("error", (err) => {
+            log(
+              "[client error] " +
+                (err && err.message ? err.message : String(err))
+            );
+          });
+          client.on("warning", (err) => {
+            log(
+              "[client warning] " +
+                (err && err.message ? err.message : String(err))
+            );
+          });
+          client.on("noPeers", (announceType) => {
+            log(
+              "[client noPeers] " +
+                (announceType || "all sources")
+            );
+          });
+        } catch (e) {
+          // ignore
+        }
         return client;
       }
 
@@ -698,8 +721,29 @@
 
         torrent.on("error", (err) => {
           statusLabelEl.textContent = "Error";
-          log("Torrent error: " + (err && err.message ? err.message : String(err)));
+          log(
+            "Torrent error: " +
+              (err && err.message ? err.message : String(err))
+          );
         });
+
+        try {
+          torrent.on("warning", (err) => {
+            log(
+              "[torrent warning] " +
+                (err && err.message ? err.message : String(err))
+            );
+          });
+          torrent.on("noPeers", (announceType) => {
+            log(
+              "Torrent noPeers from " +
+                (announceType || "all sources") +
+                "."
+            );
+          });
+        } catch (e) {
+          // ignore
+        }
       }
 
       function startDebug() {
@@ -778,7 +822,10 @@
           );
           attachTorrent(existing);
         } else {
-          log("Adding magnet to WebTorrent client.");
+          log(
+            "Adding magnet to WebTorrent client. Trackers: " +
+              (trackers.length ? trackers.join(", ") : DEFAULT_TRACKERS.join(", "))
+          );
           try {
             c.add(magnet, (torrent) => {
               attachTorrent(torrent);
@@ -791,12 +838,29 @@
             );
           }
         }
+
+        if (peerWatchTimeout) {
+          clearTimeout(peerWatchTimeout);
+        }
+        peerWatchTimeout = setTimeout(() => {
+          if (!activeTorrent) return;
+          if ((activeTorrent.numPeers || 0) === 0) {
+            statusLabelEl.textContent = "No peers";
+            log(
+              "No WebRTC peers after 20s. Likely no reachable WebTorrent/WebRTC seeder for this torrent on the configured trackers."
+            );
+          }
+        }, 20000);
       }
 
       function stopDebug() {
         if (statusInterval) {
           clearInterval(statusInterval);
           statusInterval = null;
+        }
+        if (peerWatchTimeout) {
+          clearTimeout(peerWatchTimeout);
+          peerWatchTimeout = null;
         }
 
         if (activeTorrent) {
