--- a/debug.html
+++ b/debug.html
@@ -283,10 +283,7 @@
           <span class="title-mark"></span>
           Torrent Debug
         </div>
-        <div class="subtitle">
-          Single-infohash WebTorrent debug for “Charge – Blender Open Movie”.
-          · <span id="cinema-version">commit ?</span>
-        </div>
+        <div class="subtitle">Single-infohash WebTorrent debug for “Charge – Blender Open Movie”.</div>
       </div>
       <span class="badge-soft">POC0 · debug</span>
     </header>
@@ -427,24 +424,6 @@
       encodeURIComponent(DEBUG_TITLE) +
       DEFAULT_TRACKERS_QUERY;
 
-    function attachCinemaVersion() {
-      const el = document.getElementById("cinema-version");
-      if (!el || typeof fetch === "undefined") return;
-      fetch("version.txt", { cache: "no-store" })
-        .then((res) => (res.ok ? res.text() : ""))
-        .then((text) => {
-          const raw = (text || "").trim();
-          if (!raw) {
-            el.textContent = "commit unknown";
-            return;
-          }
-          el.textContent = "commit " + raw.slice(0, 7);
-        })
-        .catch(() => {
-          el.textContent = "commit unknown";
-        });
-    }
-
     function formatSize(bytes) {
       if (!Number.isFinite(bytes) || bytes <= 0) return "unknown";
       const units = ["B", "kB", "MB", "GB", "TB"];
@@ -462,7 +441,6 @@
     }
 
     function initTorrentDebug() {
-      attachCinemaVersion();
       const infohashEl = document.getElementById("infohash");
       const magnetEl = document.getElementById("magnet");
       const titleInput = document.getElementById("title-input");
