Wire private tracker into cinema debug tools

--- a/browser-seed.html
+++ b/browser-seed.html
@@ -345,6 +345,9 @@
     const DEFAULT_TRACKERS = [
       "wss://tracker.openwebtorrent.com",
       "wss://tracker.webtorrent.dev",
+      "wss://tracker.btorrent.xyz",
+      "wss://tracker.fastcast.nz",
+      "wss://tracker.0x6d.net"
     ];
 
     function formatSize(bytes) {
@@ -555,4 +558,3 @@
   </script>
 </body>
 </html>
-
