--- a/dplayer.html
+++ b/dplayer.html
@@ -316,6 +316,9 @@
     const DEMO_TRACKERS = [
       "wss://tracker.openwebtorrent.com",
       "wss://tracker.webtorrent.dev",
+      "wss://tracker.btorrent.xyz",
+      "wss://tracker.fastcast.nz",
+      "wss://tracker.0x6d.net"
     ];
 
     function buildTrackersQuery(trackers) {
