--- a/browser-seed.html
+++ b/browser-seed.html
@@ -399,7 +399,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/webtorrent@latest/webtorrent.min.js"></script>
-  <script src="https://bundle.run/parse-torrent"></script>
+  <script src="https://unpkg.com/parse-torrent@latest/index.js"></script>
   <script>
     const DEFAULT_TRACKERS = [
       "wss://tracker.openwebtorrent.com",
