feat: Pre-fill method 4 with test infohash

--- a/browser-seed.html
+++ b/browser-seed.html
@@ -413,7 +413,7 @@
             class="textarea"
             rows="3"
             placeholder="magnet:?xt=urn:btih:abc123... or just: abc123..."
-          ></textarea>
+          >460b0b5d942af2de6e3d69333c782f391fcc1ee0</textarea>
         </div>
         <div class="controls-row">
           <button class="button" id="download-magnet-button">Download & Seed</button>
