--- a/browser-seed.html
+++ b/browser-seed.html
@@ -86,27 +86,17 @@
       box-shadow: 0 0 0 2px rgba(224, 198, 128, 0.2);
     }
 
-    .panel.active::before {
-      content: "● ACTIVE";
-      position: absolute;
-      top: 8px;
-      right: 52px;
-      font-size: 10px;
-      font-weight: 600;
-      letter-spacing: 0.08em;
-      color: var(--accent);
-    }
-
     .panel-stop-btn {
       position: absolute;
-      top: 6px;
-      right: 8px;
-      padding: 3px 8px;
+      top: 10px;
+      right: 10px;
+      padding: 4px 10px;
       border-radius: 999px;
       border: 1px solid rgba(224, 198, 128, 0.4);
-      background: transparent;
+      background: var(--bg);
       color: var(--accent);
       font-size: 11px;
+      font-weight: 500;
       cursor: pointer;
       display: none;
     }
@@ -116,8 +106,8 @@
     }
 
     .panel-stop-btn:hover {
-      border-color: rgba(224, 198, 128, 0.7);
-      background: rgba(224, 198, 128, 0.08);
+      border-color: var(--accent);
+      background: rgba(224, 198, 128, 0.12);
     }
 
     .panel-header {
