feat: Allow folder selection for methods 2 and 3

--- a/browser-seed.html
+++ b/browser-seed.html
@@ -380,12 +380,13 @@
           >
         </div>
         <div style="margin-top: 6px;">
-          <div class="field-label">Content files</div>
+          <div class="field-label">Content files or folder</div>
           <input
             id="seed-torrent-content-input"
             class="file-input"
             type="file"
             multiple
+            webkitdirectory
           >
         </div>
         <div class="controls-row">
@@ -407,12 +408,13 @@
           ></textarea>
         </div>
         <div style="margin-top: 6px;">
-          <div class="field-label">Content files</div>
+          <div class="field-label">Content files or folder</div>
           <input
             id="seed-magnet-content-input"
             class="file-input"
             type="file"
             multiple
+            webkitdirectory
           >
         </div>
         <div class="controls-row">
